--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ attrs==22.1.0
 Babel==2.9.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 emoji==2.0.0
 frozenlist==1.3.3
+gTTS==2.2.4
 idna==3.4
 magic-filter==1.0.9
 multidict==6.0.2
 python-dotenv==0.21.0
 pytz==2022.6
 requests==2.28.1
+six==1.16.0
 unicode==2.9
 urllib3==1.26.12
 yarl==1.8.1
